--- a/src/app/dashboard/fileupload/fileupload.component.html
+++ b/src/app/dashboard/fileupload/fileupload.component.html
@@ -1,3 +1,13 @@
-<button class="button" style="vertical-align:middle" routerLink="/file"><span>File</span></button><br>
-<button class="button" style="vertical-align:middle" routerLink="/ocr"><span>OCR</span></button>
-
+<div class="trashtable">
+    <h1 style="color: white;">File Uploads</h1>
+    <ul>
+        <li>
+            <h2 style="color: white;">For Ordinary File Uploads</h2>
+            <button class="button" style="vertical-align:middle" routerLink="/file"><span>File</span></button>
+        </li><br>
+        <li>
+            <h2 style="color: white;">For Optical Character Reading of Images </h2>
+            <button class="button" style="vertical-align:middle" routerLink="/ocr"><span>OCR</span></button>
+        </li>
+    </ul>
+</div>
