--- a/src/app/dashboard/groupmessage/groupmessage.component.html
+++ b/src/app/dashboard/groupmessage/groupmessage.component.html
@@ -2,12 +2,14 @@
     <h2 style="color:white;">Group Message</h2>
     <table>
         <tr>
-          <th>Group Id</th>
-          <th>Message</th>
+            <th>Group Id</th>
+            <th>Message</th>
+            <th>Created Date</th>
         </tr>
         <tr *ngFor="let groupmessage of groupmessages">
             <td>{{groupmessage.groupId}}</td>
-            <td>{{ groupmessage.message }}</td>
+            <td>{{groupmessage.message }}</td>
+            <td>{{groupmessage.createdDate}}</td>
         </tr>
     </table>
 </div>
