--- a/src/app/dashboard/issue/issue.component.html
+++ b/src/app/dashboard/issue/issue.component.html
@@ -1,19 +1,19 @@
 <div class="trashtable">
+  <h1 style="color:white ;">Issues</h1>
     <form #Form="ngForm" (ngSubmit)="addIssue()">
       <!-- <div class="form-group">
         <p><label for="email" style="color: white;">UserId</label></p>
         <input type="text" class="form-control form-control-lg" placeholder="Enter UserId" name="UserId" [(ngModel)]="issue.id">
       </div> -->
-      <div class="form-group">
-        <p><label for="pwd" style="color: white;">Description</label></p>
-        <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="Description"  [(ngModel)]="issue.description">
+      
+      <div class="form-group" class="was-validated">
+        <input type="text" class="form-control form-control-lg" placeholder="Enter Issue" name="Description"  
+        [(ngModel)]="issue.description" required="">
+        <div class="invalid-feedback">
+          Please Enter Issue
+      </div><br>
       </div>
-      <div class="form-group">
-        <p><label for="pwd" style="color: white;">Created Date</label></p>
-        <input type="date" date class="form-control form-control-lg" placeholder="Enter Created Date" name="CreatedDate" 
-        [(ngModel)]="issue.createdDate">
-      </div>
-      <button type="submit" class="button button5">Submit</button><br>
+      <button type="submit" class="button button5" [disabled]="!issue.description">Submit</button><br>
     </form>
 
     <table>
