--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -43,9 +43,9 @@
                             [disabled]="!loginForm.valid">Login</button>
                     </div>
                 </div>
-                <!-- <div class="mb-3 row">
-            <a>Forgotten Password & Username</a>
-          </div> -->
+                <div class="mb-3 row">
+            <a routerLink="/email">Forgotten Password & Username</a>
+          </div>
             </form>
         </div>
     </div>
