--- a/src/app/dashboard/settings/settings.component.html
+++ b/src/app/dashboard/settings/settings.component.html
@@ -1,7 +1,7 @@
 <div class="set">
     <ul style="list-style-type:square;">
-          <li><button (click)="toggleDarkTheme()">Toggle dark theme</button></li>
-          <li>Get Help</li>
+          <li>Change Colour <button (click)="toggleDarkTheme()">Theme</button></li>
+          <li>User Profile Editiing <button routerLink="/info">Edit Profile</button></li>
           <li>About</li>
           <li>Terms & Conditions</li>
     </ul>
