--- a/src/app/privacy/define-user/define-user.component.html
+++ b/src/app/privacy/define-user/define-user.component.html
@@ -10,7 +10,7 @@
             <th>Telephone Number</th>
             <th>User Email</th>
         </tr>
-        <tr *ngFor="let userinformation of userinformations">
+        <tr (click)="pop(userinformation)" *ngFor="let userinformation of userinformations">
             <td>{{ userinformation.empId }}</td>
             <td>{{ userinformation.firstName }}</td>
             <td>{{ userinformation.lastName }}</td>
@@ -20,7 +20,7 @@
             <td>{{userinformation.telephoneNo}}</td>
             <td>{{userinformation.userEmail}}</td>
             <td>
-                <button (click)="approveUser(userinformation)">{{this.approvebutton}}</button>
+                <button (click)="approveUser(userinformation)">{{userinformation.userAccepted?" User Accepted":"User Cancelled"}}</button>
             </td>
             <!-- <button class="button button4" (click)="updateNotification(notification)">Edit</button>
             <button class="button button3" (click)="deleteNotification(notification.id)">Delete</button> -->
