--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,7 +40,7 @@
         <div class="w3-col m6">
           <h3>WorkFlow</h3>
           <p>With new  admin features, you can simplify team management, and gain actionable insights into team activity.</p>
-          <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View our groups</a></p>
+          <p><a href="#work" class="w3-button w3-black" routerLink="/groupmessage"><i class="fa fa-th"> </i> View our groups</a></p>
         </div>
         <div class="w3-col m6">
           <img class="w3-image w3-round-large" src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80" alt="Buildings" width="700" height="394">
