--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -109,7 +109,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="profile-img">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog"
+                            <img src="https://i.pinimg.com/564x/55/6c/38/556c381559c59fd2231498de3014e7c2.jpg"
                                 alt="" />
                         </div>
                     </div>
