--- a/src/app/dashboard/fileupload/fileupload.component.html
+++ b/src/app/dashboard/fileupload/fileupload.component.html
@@ -9,5 +9,10 @@
             <h2 style="color: white;">For Optical Character Reading of Images </h2>
             <button class="button" style="vertical-align:middle" routerLink="/ocr"><span>OCR</span></button>
         </li>
+        <li>
+            <h2 style="color: white;">For Barcode File Uploads</h2>
+            <a class="button" style="vertical-align:middle" href="http://127.0.0.1:5000/"><span>Barcode</span></a>
+        </li>
+
     </ul>
 </div>
