--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -11,6 +11,8 @@
         <a routerLink="/bug-report"><img class="navicon" src="https://cdn1.iconfinder.com/data/icons/document-edit-line/64/Document-doc-file-folder-bundle-sheaf-archive-256.png" >Issue Reports</a>
         <a routerLink="/groups"><img class="navicon" src="https://cdn0.iconfinder.com/data/icons/avatar-1-2/512/group-2-512.png">Groups</a>
         <a routerLink="/useractivity"><img class="navicon" src="https://cdn0.iconfinder.com/data/icons/pixel-perfect-at-24px-volume-4/24/5064-512.png">User Activities</a>
+        <a routerLink="/allfolders"><img class="navicon" src="https://cdn1.iconfinder.com/data/icons/document-edit-line/64/Document-doc-file-folder-bundle-sheaf-archive-256.png" >All Folders</a>
+        <a routerLink="/alldocuments"><img class="navicon" src="https://cdn1.iconfinder.com/data/icons/document-edit-line/64/Document-doc-file-folder-bundle-sheaf-archive-256.png" >All Documents</a>
       </div>
     </div>
     <div class="column middle">
