--- a/src/app/privacy/allfolders/allfolders.component.html
+++ b/src/app/privacy/allfolders/allfolders.component.html
@@ -10,7 +10,7 @@
       <td>{{ folder.name }}</td>
       <td>{{folder.comment}}</td>
       <td>{{folder.createdDate}}</td>
-      <button class="button button4" (click)="updateFolder(folder)">Edit</button>
+      <!-- <button class="button button4" (click)="updateFolder(folder)">Edit</button> -->
       <button class="button button3" (click)="deleteFolder(folder.folderId)">Delete</button>
     </tr>
   </table>
