--- a/src/app/privacy/alldocuments/alldocuments.component.html
+++ b/src/app/privacy/alldocuments/alldocuments.component.html
@@ -63,7 +63,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Comments</th>
                     <th scope="col">Created Date</th>
-                    <th scope="col">Action</th>
+                    <!-- <th scope="col">Action</th> -->
 
                 </tr>
             </thead>
@@ -78,10 +78,10 @@
                     <td style="color: white;">{{fileUpload.createdDate}}</td>
 
                     <!-- <td><app-delete [fileUrl]="userdata.imgPath"></app-delete></td>-->
-                    <td style="color: white;">
+                    <!-- <td style="color: white;">
                         <app-download [fileUrl]="fileUpload.imgPath"></app-download>
                         <button type="button" class="btn btn-success" (click)="change(fileUpload)">Delete</button>
-                    </td>
+                    </td> -->
                     <td style="color: white;">
                   
                     </td>
