--- a/src/app/userdetails/userdetails.component.html
+++ b/src/app/userdetails/userdetails.component.html
@@ -62,10 +62,11 @@
     <div class="row" *ngIf="registerationSuccess">
       <div class="col-xs-12">
         <p class="alert alert-success">
-          <strong>Registration is Success Admin will Approve You Please Wait</strong>
+          <strong>Registration Successfull. Admin will Approve You Please Wait</strong>
         </p>
       </div>
-    </div>
+    </div><br>
+    <button routerLink="/login">Back to Login</button>
   </form>
 </div>
 
