--- a/src/app/dashboard/folders/folders.component.html
+++ b/src/app/dashboard/folders/folders.component.html
@@ -49,9 +49,9 @@
       <td>{{folder.createdDate}}</td>
       <button class="button button4" (click)="updateFolder(folder)">Edit</button>
       <button class="button button3" (click)="deleteFolder(folder.folderId)">Delete</button>
-      <button class="" (click)="addfiles(folder)">Add Files</button>
+      <button class="btn btn-secondary" (click)="addfiles(folder)">Add Files</button>
       &nbsp;
-      <button (click)="viewfile(folder)">View Files</button>
+      <button class="btn btn-secondary" (click)="viewfile(folder)">View Files</button>
     </tr>
   </table>
 <br><br>
