--- a/src/app/privacy/useractivity/useractivity.component.html
+++ b/src/app/privacy/useractivity/useractivity.component.html
@@ -1,5 +1,5 @@
 <div class="trashtable">
-    <h2 style="color:white;">Group Message</h2>
+    <h1 style="color:white;">User Activities</h1>
     <table>
         <tr>
           <th>User Email</th>
