--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -14,6 +14,6 @@
                 </p>
             </div>
         </div>
-        <button routerLink="/login">Back to Login</button>
+        <button class="btn btn-primary" routerLink="/login">Back to Login</button>
     </form>
 </div>
