--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -103,14 +103,13 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!------ Include the above in your HEAD tag ---------->
 
-    <div class="container" >
+    <div class="container">
         <form method="post">
             <tr *ngFor="let item of userList$|async">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="profile-img">
-                            <img src="https://i.pinimg.com/564x/55/6c/38/556c381559c59fd2231498de3014e7c2.jpg"
-                                alt="" />
+                            <img src="https://i.pinimg.com/564x/55/6c/38/556c381559c59fd2231498de3014e7c2.jpg" alt="" />
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -139,7 +138,7 @@
                     </div>
                     <div class="col-md-2">
                         <!-- <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit jyProfile" />  -->
-                        <button class="btn btn-outline-success me-2 mb-1 " (click)="modalEdit(item)" 
+                        <button class="btn btn-outline-success me-2 mb-1 " (click)="modalEdit(item)"
                             data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-pencil-square" viewBox="0 0 16 16">
