--- a/src/app/userdetails/userdetails.component.html
+++ b/src/app/userdetails/userdetails.component.html
@@ -66,7 +66,7 @@
         </p>
       </div>
     </div><br>
-    <button routerLink="/login">Back to Login</button>
+    <button class="btn btn-primary" routerLink="/login">Back to Login</button>
   </form>
 </div>
 
